<resources>
    <string name="app_name">Resquizz Gotham</string>

    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>

    <string name="title_activity_play">Play</string>
    <string name="title_activity_scores">Scores</string>
    <string name="title_activity_settings">Settings</string>

    <string name="btPlayText">Play</string>
    <string name="btScoresText">Scores</string>
    <string name="btSettingsText">Settings</string>
    <string name="title_activity_credits">CreditsActivity</string>

    <string name="authorsText">Author</string>
    <string name="authorsContent">David García Molino</string>

    <string name="versionInfo">Version: 0.1</string>

    <string name="tvSettingsName">Name:</string>
    <string name="etNameHint">Put your nickname</string>
    <string name="tvSettingsHowMany">How many times can you call Alfred:</string>
    <string name="btAddFriend">Add friend</string>
    <string name="btSaveText">Save</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="facebook_app_id">491017107748799</string>
</resources>
