<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.adm.coper.resquizzgotham.Activities.CreditsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/creditsTitle"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/riddler_purple"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvAuthors"
        android:textStyle="bold"
        android:textColor="@color/riddler_purple"
        android:text="@string/authorsText"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/creditsTitle"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/riddler_purple"
        android:text="@string/authorsContent"
        android:id="@+id/tvAuthorsContent"
        android:textStyle="bold"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/tvAuthors"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/riddler_purple"
        android:text="@string/versionInfo"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
