<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context="com.adm.coper.resquizzgotham.SettingsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvSettingsName"
        android:textColor="@color/riddler_green"
        android:id="@+id/settingsName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvSettingsHowMany"
        android:textColor="@color/riddler_green"
        android:id="@+id/settingsHowMany"
        android:layout_below="@+id/settingsName"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="76dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/riddler_green"
        android:text="@string/btAddFriend"
        android:textColor="@android:color/white"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignBottom="@+id/settingsHowMany"
        android:layout_toRightOf="@+id/settingsHowMany" />

</RelativeLayout>
